# bloatectomy-ectomy

./: .buildinfo  .gitignore  README.html  api.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: README.doctree  api.doctree  environment.pickle  index.doctree  install.doctree  usage.doctree
.doctrees/autoapi/bloatectomy_ectomy/: index.doctree
.doctrees/autoapi/bloatectomy_ectomy/cli/: index.doctree
.doctrees/autoapi/bloatectomy_ectomy/utils/: index.doctree
.github/workflows/: gh_pages.yml
Deploy/: Dockerfile-make-docs
_modules/: index.html
_modules/bloatectomy_ectomy/: cli.html
_modules/bloatectomy_ectomy/cli/: main_purpose.html  run_command.html
_modules/bloatectomy_ectomy/utils/: aux_funcs.html
_sources/: README.md.txt  index.rst.txt
_sources/autoapi/bloatectomy_ectomy/: index.rst.txt
_sources/autoapi/bloatectomy_ectomy/cli/: index.rst.txt
_sources/autoapi/bloatectomy_ectomy/utils/: index.rst.txt
autoapi/bloatectomy_ectomy/: index.html
autoapi/bloatectomy_ectomy/cli/: index.html
autoapi/bloatectomy_ectomy/cli/main_purpose/: index.html
autoapi/bloatectomy_ectomy/cli/run_command/: index.html
autoapi/bloatectomy_ectomy/utils/: index.html
autoapi/bloatectomy_ectomy/utils/aux_funcs/: index.html
bloatectomy_ectomy/: __init__.py
bloatectomy_ectomy/cli/: __init__.py  main_purpose.py  run_command.py
bloatectomy_ectomy/utils/: __init__.py  aux_funcs.py
docs/: Makefile  api.rst  conf.py  install.md  usage.md
(+6 files in other folders)
